micro/microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: micro
  labels:
    app: micro
spec:
  ingressClassName: cilium
  rules:
    - host: micro.192.168.48.134.nip.io ## micro.<localhost.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
